<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog"
    android:orientation="vertical"
    android:padding="@dimen/_16sdp">

    <ImageView
        android:id="@+id/close"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:layout_gravity="end"
        android:src="@drawable/ic_close" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:text="@string/select_sim"
        android:textColor="@color/dialog_heading_color"
        android:textSize="@dimen/_14ssp" />

    <EditText
        android:id="@+id/sim"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@drawable/bg_edit_text"
        android:hint="@string/sim_1"
        android:paddingHorizontal="@dimen/_16sdp"
        android:paddingVertical="@dimen/_10sdp"
        android:textSize="@dimen/_14ssp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:text="@string/forward_to"
        android:textColor="@color/dialog_heading_color"
        android:textSize="@dimen/_14ssp" />

    <EditText
        android:id="@+id/recipient"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@drawable/bg_edit_text"
        android:hint="@string/_9876543210"
        android:inputType="number"
        android:maxLength="10"
        android:paddingHorizontal="@dimen/_16sdp"
        android:paddingVertical="@dimen/_10sdp"
        android:textSize="@dimen/_14ssp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:text="@string/sample_sms"
        android:textColor="@color/dialog_heading_color"
        android:textSize="@dimen/_14ssp" />

    <EditText
        android:id="@+id/sampleSms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@drawable/bg_edit_text"
        android:gravity="start"
        android:hint="@string/_961128_is_otp_for_txn_of_inr_9999_00_at_amazon_on_icici_bank_credit_card_xx5009_otps_are_secret_do_not_disclose_it_to_anyone_bank_never_asks_for_otp"
        android:paddingHorizontal="@dimen/_16sdp"
        android:paddingVertical="@dimen/_10sdp"
        android:textSize="@dimen/_14ssp" />

    <TextView
        android:id="@+id/addUpdate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:background="@drawable/bg_button"
        android:gravity="center"
        android:paddingVertical="@dimen/_10sdp"
        android:text="@string/add"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp" />

</LinearLayout>