<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingVertical="@dimen/_15sdp">

    <ImageView
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_50sdp"
        android:src="@drawable/ic_close" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:gravity="center"
        android:text="@string/are_you_sure"
        android:textSize="@dimen/_16ssp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_20sdp"
        android:gravity="center"
        android:text="@string/do_you_really_want_to_delete_these_record_this_process_cannot_be_undone"
        android:textSize="@dimen/_13ssp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/_20sdp"
        android:paddingHorizontal="@dimen/_25sdp">

        <TextView
            android:id="@+id/cancelDelete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:layout_weight="1"
            android:background="@drawable/bg_button"
            android:backgroundTint="@color/main_color"
            android:gravity="center"
            android:paddingVertical="@dimen/_8sdp"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp" />

        <TextView
            android:id="@+id/confirmDelete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:layout_weight="1"
            android:background="@drawable/bg_button"
            android:gravity="center"
            android:paddingVertical="@dimen/_8sdp"
            android:text="@string/delete"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp" />
    </LinearLayout>

</LinearLayout>